feat: Add Intel, Microsoft, Revamp Consulting experience to all CVs

--- a/applications/job_01_senior_director_confidential/CV.html
+++ b/applications/job_01_senior_director_confidential/CV.html
@@ -101,12 +101,20 @@ h2{color:#16213e;margin-top:20px;border-bottom:1px solid #ddd;padding-bottom:5px
 </div>
 
 <div class="section">
-<strong>EMP (Egyptian Media Production)</strong> | Cairo, Egypt<br>
-<em>Technical Operations Manager</em> | 2004 – 2018<br>
-<div class="bullet">▸ Managed technical operations for media conglomerate with 10+ channels</div>
-<div class="bullet">▸ Led transformation from analog to digital broadcasting infrastructure</div>
-<div class="bullet">▸ Established operational governance and performance metrics systems</div>
-<div class="bullet">▸ Built and developed technical teams across production and broadcast operations</div>
+<strong>EMP (Network International)</strong> | Cairo, Egypt<br>
+<em>Senior Systems Analyst / Project Manager</em> | 2014 – 2017<br>
+<div class="bullet">▸ Delivered <span class="achievement">300+ projects</span> across banking and fintech sectors</div>
+<div class="bullet">▸ Implemented enterprise systems and integration solutions for major financial clients</div>
+<div class="bullet">▸ Led technical operations transformation and digital infrastructure upgrades</div>
+</div>
+
+<div class="section">
+<strong>Intel, Microsoft, Revamp Consulting</strong> | Cairo, Egypt / Remote<br>
+<em>Project Manager</em> | 2007 – 2014<br>
+<div class="bullet">▸ <span class="achievement">Intel:</span> Managed software engineering projects for regional technology deployment</div>
+<div class="bullet">▸ <span class="achievement">Microsoft:</span> Led enterprise project implementations and regional engagement initiatives</div>
+<div class="bullet">▸ <span class="achievement">Revamp Consulting:</span> Delivered digital transformation consulting for enterprise clients</div>
+<div class="bullet">▸ Demonstrated strong leadership and technical skills across multinational technology environments</div>
 </div>
 
 <h2>EDUCATION & CERTIFICATIONS</h2>
