--- a/applications/job_02_bisher_partners/CV.html
+++ b/applications/job_02_bisher_partners/CV.html
@@ -108,11 +108,20 @@ h2{color:#16213e;margin-top:20px;border-bottom:1px solid #ddd;padding-bottom:5px
 </div>
 
 <div class="section">
-<strong>EMP (Egyptian Media Production)</strong> | Cairo, Egypt<br>
-<em>Advisor – Digital Transformation</em> | 2004 – 2018<br>
-<div class="bullet">▸ Advised on digital transformation and technology infrastructure investments</div>
-<div class="bullet">▸ Led operational restructuring and corporate development initiatives</div>
-<div class="bullet">▸ Managed Board reporting on transformation initiatives</div>
+<strong>EMP (Network International)</strong> | Cairo, Egypt<br>
+<em>Senior Systems Analyst / Project Manager</em> | 2014 – 2017<br>
+<div class="bullet">▸ Delivered <span class="achievement">300+ projects</span> across banking and fintech sectors</div>
+<div class="bullet">▸ Implemented enterprise systems for major financial clients</div>
+<div class="bullet">▸ Led technical transformation and digital infrastructure upgrades</div>
+</div>
+
+<div class="section">
+<strong>Intel, Microsoft, Revamp Consulting</strong> | Cairo, Egypt / Remote<br>
+<em>Project Manager</em> | 2007 – 2014<br>
+<div class="bullet">▸ <span class="achievement">Intel:</span> Managed software engineering projects for regional technology deployment</div>
+<div class="bullet">▸ <span class="achievement">Microsoft:</span> Led enterprise project implementations and regional engagement</div>
+<div class="bullet">▸ <span class="achievement">Revamp Consulting:</span> Delivered digital transformation consulting for enterprise clients</div>
+<div class="bullet">▸ Built foundation in multinational technology environments</div>
 </div>
 
 <h2>EDUCATION & CERTIFICATIONS</h2>
