--- a/applications/job_03_construction_epc/CV.html
+++ b/applications/job_03_construction_epc/CV.html
@@ -100,6 +100,15 @@ h2{color:#16213e;margin-top:20px;border-bottom:1px solid #ddd;padding-bottom:5px
 <div class="bullet">▸ Delivered <span class="achievement">300+ projects</span> across banking and fintech sectors</div>
 </div>
 
+<div class="section">
+<strong>Intel, Microsoft, Revamp Consulting</strong> | Egypt / Remote<br>
+<em>Project Manager</em> | 2007 – 2014<br>
+<div class="bullet">▸ <span class="achievement">Intel:</span> Managed software engineering projects for regional technology deployment</div>
+<div class="bullet">▸ <span class="achievement">Microsoft:</span> Led enterprise project implementations and regional engagement initiatives</div>
+<div class="bullet">▸ <span class="achievement">Revamp Consulting:</span> Delivered digital transformation consulting for enterprise clients</div>
+<div class="bullet">▸ Built strong leadership and technical skills across multinational technology environments</div>
+</div>
+
 <h2>EDUCATION & CERTIFICATIONS</h2>
 <div class="bullet">▸ MBA — Business Administration (In Progress)</div>
 <div class="bullet">▸ BSc. Computer Sciences & Business Administration</div>
